@@ -190,5 +190,13 @@ public class TestGlobalSysExpressions extends CrateUnitTest {
                 routingAllocation.get(CrateSettings.ROUTING_ALLOCATION_ENABLE.name()),
                 is((Object) CrateSettings.ROUTING_ALLOCATION_ENABLE.defaultValue())
                 );
+
+        Map gateway = (Map) settings.get(CrateSettings.GATEWAY.name());
+        assertThat(gateway.get(CrateSettings.GATEWAY_RECOVER_AFTER_TIME.name()),
+                is((Object) CrateSettings.GATEWAY_RECOVER_AFTER_TIME.defaultValue().toString()));
+        assertEquals(gateway.get(CrateSettings.GATEWAY_RECOVERY_AFTER_NODES.name()),
+                CrateSettings.GATEWAY_RECOVERY_AFTER_NODES.defaultValue());
+        assertEquals(gateway.get(CrateSettings.GATEWAY_EXPECTED_NODES.name()),
+                CrateSettings.GATEWAY_EXPECTED_NODES.defaultValue());
     }
 }
